# amg

./: Makefile  README.md  docker-compose.yaml
backend/: .flake8  Dockerfile  pyproject.toml
backend/backend/: __main__.py  app.py  foobar.py  main.py
backend/backend/api/: __init__.py  foobar.py
backend/tests/: test_foobar.py  test_main.py
backend/tests/api/: test_foobar.py
docs/: steps.md
frontend/: .gitignore  Dockerfile  package.json
frontend/pages/: index.js
frontend/styles/: Home.module.css
