[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yiorgis Gozadinos <ggozadinos@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
foobar = "backend.main:app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
